// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": true
    }
  }
}"
`;

exports[`dependent output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"weirdlongrunningresource\\": {
        \\"name\\": \\"foo\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/weird-long-running-resource\\",
            \\"uniqueId\\": \\"weirdlongrunningresource\\"
          }
        }
      }
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": 1,
      \\"depends_on\\": [
        \\"\${test_resource.weirdlongrunningresource}\\"
      ]
    }
  }
}"
`;

exports[`description output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": 1,
      \\"description\\": \\"test-description\\"
    }
  }
}"
`;

exports[`list output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": [
        \\"foo\\",
        \\"bar\\"
      ]
    }
  }
}"
`;

exports[`map output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": {
        \\"foo\\": \\"bar\\"
      }
    }
  }
}"
`;

exports[`number output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": 1
    }
  }
}"
`;

exports[`sensitive output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": 1,
      \\"sensitive\\": true
    }
  }
}"
`;

exports[`string output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"output\\": {
    \\"testoutput\\": {
      \\"value\\": \\"1\\"
    }
  }
}"
`;
